--- a/paper/tex/summarization_metric.tex
+++ b/paper/tex/summarization_metric.tex
@@ -28,7 +28,7 @@
 	\thanks{This work is not affiliated with Leidos, Inc.
 	}\\ 
     Sonnetiq\\
-	\texttt{foland@sonnetiq.com} \\
+	\texttt{andrew.foland@sonnetiq.com} \\
 }
 
 % Uncomment to remove the date
@@ -110,7 +110,7 @@ In this paper we contribute:
 \section{Background}
 
 \subsection{Previous Work}
-As discussed in \citep{retkowski2023current}:
+As discussed in \citep{2023arXiv230504853R}:
 
 \begin{quote}
 Most commonly, summarization systems are evaluated on automated metrics. ROUGE \citep{lin_rouge_2004} in particular has a long-standing history in the field and measures the lexical overlap between reference summaries and generated summaries. More recent metrics such as BertScore \citep{zhang_bertscore_2019} and BARTScore \citep{yuan_bartscore_2021}, which are better at capturing semantic equivalence, are also becoming increasingly established. 
@@ -375,7 +375,7 @@ We show in figure \ref{fig:summary_similarities} that the similarity of a text w
 
 \subsection{Null Summarizations}
 
-To demonstrate the the cosine similarity metric is near zero for unrelated texts, we randomly pair (exluding the correct pairings) texts with the summaries of other texts.  
+To demonstrate that the cosine similarity metric is near zero for unrelated texts, we randomly pair (exluding the correct pairings) texts with the summaries of other texts.  
 The resulting distribution is shown in figure \ref{fig:randomsimilarity}, peaking near 0.
 
 \subsection{Paraphrase Tests}
